Fix many issues