@@ -3,8 +3,6 @@
  */
 package org.jenkinsci.plugins.scriptler.builder;
 
-import static hudson.util.QuotedStringTokenizer.quote;
-
 import com.thoughtworks.xstream.converters.ConversionException;
 import com.thoughtworks.xstream.converters.UnmarshallingContext;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
@@ -25,19 +23,22 @@ import hudson.security.Permission;
 import hudson.tasks.BuildStepDescriptor;
 import hudson.tasks.Builder;
 import hudson.util.FormApply;
+import hudson.util.QuotedStringTokenizer;
 import hudson.util.XStream2;
 import jakarta.servlet.ServletException;
 import java.io.IOException;
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import jenkins.model.Jenkins;
 import jenkins.util.xstream.CriticalXStreamException;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
-import org.apache.commons.lang.StringUtils;
 import org.jenkinsci.plugins.scriptler.Messages;
 import org.jenkinsci.plugins.scriptler.ScriptlerManagement;
 import org.jenkinsci.plugins.scriptler.ScriptlerPermissions;
@@ -62,13 +63,20 @@ import org.kohsuke.stapler.bind.JavaScriptMethod;
  */
 public class ScriptlerBuilder extends Builder implements Serializable {
     private static final AtomicInteger CURRENT_ID = new AtomicInteger();
+
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private static final Logger LOGGER = Logger.getLogger(ScriptlerBuilder.class.getName());
+    private static final String BUILDER_ID = "builderId";
 
     // this is only used to identify the builder if a user without privileges modifies the job.
+    @CheckForNull
     private final String builderId;
+
+    @CheckForNull
     private final String scriptId;
+
     private final boolean propagateParams;
 
     @NonNull
@@ -77,14 +85,21 @@ public class ScriptlerBuilder extends Builder implements Serializable {
     /**
      * @deprecated as of 3.5; use {@link #ScriptlerBuilder(String, String, boolean, List)}
      */
-    @Deprecated
-    public ScriptlerBuilder(String builderId, String scriptId, boolean propagateParams, Parameter[] parameters) {
+    @Deprecated(since = "3.5")
+    public ScriptlerBuilder(
+            @CheckForNull String builderId,
+            @CheckForNull String scriptId,
+            boolean propagateParams,
+            Parameter[] parameters) {
         this(builderId, scriptId, propagateParams, Arrays.asList(Objects.requireNonNull(parameters)));
     }
 
     @DataBoundConstructor
     public ScriptlerBuilder(
-            String builderId, String scriptId, boolean propagateParams, @NonNull List<Parameter> parameters) {
+            @CheckForNull String builderId,
+            @CheckForNull String scriptId,
+            boolean propagateParams,
+            @NonNull List<Parameter> parameters) {
         this.builderId = builderId;
         this.scriptId = scriptId;
         this.parameters = new ArrayList<>(parameters);
@@ -95,10 +110,8 @@ public class ScriptlerBuilder extends Builder implements Serializable {
         Map<String, String> errors = new HashMap<>();
 
         Script script = ScriptHelper.getScript(scriptId, true);
-        if (script != null) {
-            if (!script.nonAdministerUsing) {
-                errors.put("scriptId", "The script is not allowed to be executed in a build, check its configuration!");
-            }
+        if (script != null && !script.nonAdministerUsing) {
+            errors.put("scriptId", "The script is not allowed to be executed in a build, check its configuration!");
         }
 
         checkPermission(errors);
@@ -107,25 +120,19 @@ public class ScriptlerBuilder extends Builder implements Serializable {
     }
 
     private void checkPermission(@NonNull Map<String, String> errors) {
-        if (Jenkins.get().hasPermission(Jenkins.RUN_SCRIPTS)) {
-            // user has right to add / edit Scripler steps
+        if (Jenkins.get().hasPermission(ScriptlerPermissions.CONFIGURE)) {
+            // user has right to add / edit Scriptler steps
             return;
         }
 
         Project<?, ?> project = retrieveProjectUsingCurrentRequest();
-        if (project != null) {
-            if (!hasSameScriptlerBuilderInProject(project, this)) {
-                if (StringUtils.isBlank(builderId)) {
-                    errors.put(
-                            "builderId",
-                            "As the given builder does not have ID, it must be equals to one of the existing builder that does not have ID");
-                } else {
-                    errors.put(
-                            "builderId",
-                            "The builderId must correspond to an existing builder of that project since the user does not have the rights to add/edit Scriptler step");
-                }
-            }
+        if (!getAllScriptlerBuildersFromProject(project).contains(this)) {
+            final String message = builderId == null || builderId.isBlank()
+                    ? "As the given builder does not have ID, it must be equals to one of the existing builder that does not have ID"
+                    : "The builderId must correspond to an existing builder of that project since the user does not have the rights to add/edit Scriptler step";
+            errors.put(BUILDER_ID, message);
         }
+
         // else: we are not in a request context
     }
 
@@ -133,45 +140,26 @@ public class ScriptlerBuilder extends Builder implements Serializable {
      * Must not be called inside XML processing since the modified data are not stored
      */
     private ScriptlerBuilder recreateBuilderWithBuilderIdIfRequired() {
-        if (StringUtils.isBlank(builderId)) {
+        if (builderId == null || builderId.isBlank()) {
             return new ScriptlerBuilder(generateBuilderId(), scriptId, propagateParams, parameters);
         }
         return this;
     }
 
-    private Object readResolve() {
-        return this;
-    }
-
-    private boolean hasSameScriptlerBuilderInProject(
-            @NonNull Project<?, ?> project, @NonNull ScriptlerBuilder targetBuilder) {
-        List<ScriptlerBuilder> allScriptlerBuilders = _getAllScriptlerBuildersFromProject(project);
-        for (ScriptlerBuilder builder : allScriptlerBuilders) {
-            if (targetBuilder.equals(builder)) {
-                return true;
-            }
+    private @NonNull List<ScriptlerBuilder> getAllScriptlerBuildersFromProject(@CheckForNull Project<?, ?> project) {
+        if (project == null) {
+            return List.of();
         }
-
-        return false;
-    }
-
-    private @NonNull List<ScriptlerBuilder> _getAllScriptlerBuildersFromProject(@NonNull Project<?, ?> project) {
         return project.getBuildersList().getAll(ScriptlerBuilder.class);
     }
 
     private @CheckForNull Project<?, ?> retrieveProjectUsingCurrentRequest() {
-        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
-        if (currentRequest != null) {
-            Project<?, ?> project = Stapler.getCurrentRequest2().findAncestorObject(Project.class);
-            if (project != null) {
-                return project;
-            }
-        }
-
-        // we are not in a request or manipulating a builder outside of a project
-        return null;
+        return Optional.ofNullable(Stapler.getCurrentRequest2())
+                .map(req -> req.findAncestorObject(Project.class))
+                .orElse(null);
     }
 
+    @CheckForNull
     public String getScriptId() {
         return scriptId;
     }
@@ -179,7 +167,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
     /**
      * @deprecated since 3.5
      */
-    @Deprecated
+    @Deprecated(since = "3.5")
     public Parameter[] getParameters() {
         return parameters.toArray(new Parameter[0]);
     }
@@ -202,7 +190,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
         final Script script = ScriptHelper.getScript(scriptId, true);
 
         if (script == null) {
-            if (StringUtils.isBlank(scriptId)) {
+            if (scriptId == null || scriptId.isBlank()) {
                 LOGGER.log(Level.WARNING, "The script id was blank for the build {0}:{1}", new Object[] {
                     build.getProject().getName(), build.getDisplayName()
                 });
@@ -229,7 +217,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
             return false;
         }
 
-        if (!ScriptHelper.isApproved(script.getScript())) {
+        if (!ScriptHelper.isApproved(script.getScriptText())) {
             listener.getLogger().println(Messages.scriptNotApprovedYet(script.getName()));
             LOGGER.log(
                     Level.WARNING,
@@ -255,10 +243,9 @@ public class ScriptlerBuilder extends Builder implements Serializable {
                     for (ParameterValue parameterValue : jobParams) {
                         // pass the params to the token expander in a way that these get expanded by environment
                         // variables (params are also environment variables)
-                        expandedParams.add(new Parameter(
-                                parameterValue.getName(),
-                                TokenMacro.expandAll(
-                                        build, listener, "${" + parameterValue.getName() + "}", false, null)));
+                        String macro = "${" + parameterValue.getName() + "}";
+                        String value = TokenMacro.expandAll(build, listener, macro, false, null);
+                        expandedParams.add(new Parameter(parameterValue.getName(), value));
                     }
                 }
             }
@@ -267,10 +254,10 @@ public class ScriptlerBuilder extends Builder implements Serializable {
                         parameter.getName(), TokenMacro.expandAll(build, listener, parameter.getValue())));
             }
             final Object output;
-            if (script.onlyMaster) {
-                // When run on master, make build, launcher, listener available to script
+            if (script.onlyController) {
+                // When run on controller, make build, launcher, listener available to script
                 output = FilePath.localChannel.call(
-                        new GroovyScript(script.getScript(), expandedParams, true, listener, launcher, build));
+                        new GroovyScript(script.getScriptText(), expandedParams, true, listener, launcher, build));
             } else {
                 VirtualChannel channel = launcher.getChannel();
                 if (channel == null) {
@@ -278,15 +265,15 @@ public class ScriptlerBuilder extends Builder implements Serializable {
                     listener.getLogger()
                             .println(Messages.scriptExecutionFailed(scriptId) + " - " + Messages.agent_no_channel());
                 } else {
-                    output = channel.call(new GroovyScript(script.getScript(), expandedParams, true, listener));
+                    output = channel.call(new GroovyScript(script.getScriptText(), expandedParams, true, listener));
                 }
             }
-            if (output instanceof Boolean && Boolean.FALSE.equals(output)) {
-                isOk = false;
-            } else {
-                isOk = true;
-            }
-        } catch (IOException | InterruptedException | MacroEvaluationException e) {
+            isOk = !Boolean.FALSE.equals(output);
+        } catch (InterruptedException e) {
+            listener.getLogger().println(Messages.scriptExecutionFailed(scriptId) + " - " + e.getMessage());
+            e.printStackTrace(listener.getLogger());
+            Thread.currentThread().interrupt();
+        } catch (IOException | MacroEvaluationException e) {
             listener.getLogger().println(Messages.scriptExecutionFailed(scriptId) + " - " + e.getMessage());
             e.printStackTrace(listener.getLogger());
         }
@@ -338,10 +325,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
 
             if (!errors.isEmpty()) {
                 ConversionException conversionException = new ConversionException("Validation failed");
-                for (Map.Entry<String, String> error : errors.entrySet()) {
-                    conversionException.add(error.getKey(), error.getValue());
-                }
-
+                errors.forEach(conversionException::add);
                 throw new CriticalXStreamException(conversionException);
             }
         }
@@ -355,6 +339,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
             return Jenkins.get().hasPermission(ScriptlerPermissions.RUN_SCRIPTS);
         }
 
+        @NonNull
         @Override
         public String getDisplayName() {
             return Messages.builder_name();
@@ -368,10 +353,10 @@ public class ScriptlerBuilder extends Builder implements Serializable {
         @Override
         public ScriptlerBuilder newInstance(StaplerRequest2 req, JSONObject formData) {
             ScriptlerBuilder builder = null;
-            String builderId = formData.optString("builderId");
+            String builderId = formData.optString(BUILDER_ID);
             String id = formData.optString("scriptlerScriptId");
 
-            if (StringUtils.isNotBlank(id)) {
+            if (id != null && !id.isBlank()) {
                 boolean inPropagateParams = formData.getBoolean("propagateParams");
                 List<Parameter> params = UIHelper.extractParameters(formData);
                 builder = new ScriptlerBuilder(builderId, id, inPropagateParams, params);
@@ -433,38 +418,29 @@ public class ScriptlerBuilder extends Builder implements Serializable {
      * Notify the user with multiple message about the validation that failed
      */
     private static class MultipleErrorFormValidation extends RuntimeException implements HttpResponse {
-        private Map<String, String> fieldToMessage = new HashMap<>();
+        private final Map<String, String> fieldToMessage;
 
         public MultipleErrorFormValidation(Map<String, String> fieldToMessage) {
             this.fieldToMessage = fieldToMessage;
         }
 
         private String getAggregatedMessage() {
-            List<String> errorMessageList = new ArrayList<>();
-            for (Map.Entry<String, String> error : fieldToMessage.entrySet()) {
-                errorMessageList.add(buildMessageForField(error.getKey(), error.getValue()));
-            }
-            return StringUtils.join(errorMessageList, ", ");
+            return buildMessages().collect(Collectors.joining(", "));
         }
 
-        private String buildMessageForField(String fieldName, String fieldMessage) {
-            return fieldName + ": " + fieldMessage;
+        private Stream<String> buildMessages() {
+            return fieldToMessage.entrySet().stream().map(error -> error.getKey() + ": " + error.getValue());
         }
 
         @Override
         public void generateResponse(StaplerRequest2 req, StaplerResponse2 rsp, Object node)
                 throws IOException, ServletException {
             if (FormApply.isApply(req)) {
-                StringBuilder scriptBuilder = new StringBuilder();
-                for (Map.Entry<String, String> error : fieldToMessage.entrySet()) {
-                    String errorMessage = buildMessageForField(error.getKey(), error.getValue());
-                    scriptBuilder
-                            .append("notificationBar.show(")
-                            .append(quote(errorMessage))
-                            .append(",notificationBar.ERROR)");
-                }
-
-                FormApply.applyResponse(scriptBuilder.toString()).generateResponse(req, rsp, node);
+                String script = buildMessages()
+                        .map(QuotedStringTokenizer::quote)
+                        .map(error -> "notificationBar.show(" + error + ",notificationBar.ERROR)")
+                        .collect(Collectors.joining(""));
+                FormApply.applyResponse(script).generateResponse(req, rsp, node);
             } else {
                 new Failure(getAggregatedMessage()).generateResponse(req, rsp, node);
             }
